{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "ba28bbe7-3107-40b6-bcc0-323f6a5882fa",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "bccf5dcc-553d-4099-aaf5-95a3ba889f36",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "8780b16d-7e66-4655-ae38-30081c2b29f3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenGrimoire",
                    "type": "Button",
                    "id": "bc30d472-ed5c-415a-80d5-934cdf566d7e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "8a11fb82-234c-4764-bec4-bd1c6026460d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "851b7629-a28a-4c19-9996-b74016122520",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f5f7755b-c577-46a7-9705-e714f2e008a1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "be63272a-b2b7-4b6f-9bda-bf79addc4e4c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c3691f34-e033-45e7-8ea6-9912dfe52c0d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3b70a762-2ea4-49a7-99ea-b0d18fa0c57b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f15b2cdf-b235-4179-ad0e-ec3dbc09c168",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenGrimoire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Minigame",
            "id": "a30c9066-651d-4778-b9d7-5be067d2e47a",
            "actions": [
                {
                    "name": "PrimaryAction",
                    "type": "Button",
                    "id": "00733a82-d296-43a0-8f7e-66568d875086",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b15e7d6d-942f-4dce-a4d7-d9690b1bd176",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}